# Prometheus

./: .coverage  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamlfmt  .yamllint  .yamllint.yaml  AGENTS.md  CHIRON_UPGRADES_SUMMARY.md  CODEOWNERS  CURRENT_STATUS.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  Next Steps.md  PRE_PACKAGING_README.md  PROJECT_ORGANIZATION.md  Promethus Brief.md  README-dev-setup.md  README.md  SOLUTION_SUMMARY.md  TODO-refactoring.md  mypy.ini  pyproject.toml  renovate.json
.cache/: format_yaml_helper.json
.copilot/hints/: offline-packaging.md
.githooks/: post-rewrite  pre-commit
.github/: copilot-instructions.md
.github/PULL_REQUEST_TEMPLATE/: ci-summary-improvements.md
.github/actions/: README.md
.github/workflows/: automated-dependency-sync.yml  build-wheelhouse-frontier.yml  ci.yml  dependency-check.yml  dependency-contract-check.yml  dependency-contract-upgrade.yml  dependency-orchestration.yml  dependency-preflight.yml  offline-packaging-optimized.yml  offline-packaging.yml  pipeline-dry-run.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
CI/: README.md
api/: __init__.py  bootstrap.py  main.py  serializers.py
chiron/: CHIRON_UPGRADE_PLAN.md  __init__.py  __main__.py  cli.py  plugins.py  telemetry.py
chiron/doctor/: __init__.py  bootstrap.py  models.py
chiron/github/: __init__.py  sync.py
chiron/orchestration/: README.md  __init__.py  auto_sync.py  coordinator.py  governance.py
chiron/packaging/: __init__.py  metadata.py  offline.py
chiron/remediation/: autoremediate.py  github_summary.py  prompts.py  runtime.py
chiron/tools/: __init__.py  ensure_uv.py  format_yaml.py  uv_installer.py
collaboration/: README.md  __init__.py  crdt.py  presence.py
common/: README.md  events.py
common/contracts/: __init__.py  base.py  decision.py  execution.py  governance.py  ingestion.py  monitoring.py  reasoning.py  retrieval.py
configs/: README.md  dependency-policy.toml
configs/defaults/: auto_sync_dev.toml  auto_sync_prod.toml  dependency_snapshot_notification.json  dependency_snapshot_request.json  dependency_snapshot_schedule.json  dependency_snapshot_schedule.toml  monitoring.toml  offline_package.toml  pipeline.toml  pipeline_dryrun.toml  pipeline_local.toml  policies.toml  retrieval_regression.toml
constraints/: production.txt  runtime-roots.txt
decision/: README.md  __init__.py  service.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: CLI_UPGRADE_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE_INDEX.md  ONBOARDING_CHECKLIST.md  PRE_PACKAGING_IMPLEMENTATION.md  PRE_PACKAGING_USAGE.md  README.md  RELEASE_READINESS.md  ROADMAP.md  TESTING_STRATEGY.md  WRANGLING_SUMMARY.md  architecture.md  automated-dependency-sync-implementation.md  capability-map.md  ci-handbook.md  ci-packaging-quickref.md  ci-workflow-comparison.md  ci_workflow_comparison.md  cibuildwheel-integration.md  cross-workflow-integration.md  dependency-governance.md  dependency-graph.md  dependency-management-pipeline.md  dependency-pipeline-orchestration.md  dependency-upgrade-architecture.md  dependency-upgrade-gap-analysis.md  dependency-upgrade-todos.md  dependency-upgrade-tracker.md  dependency-upgrade-workflow.md  developer-experience.md  getting-started.md  integration-summary.md  lfs-wheelhouse-optimization.md  model-strategy.md  module-boundaries.md  new-workflow-checklist.md  observability.md  offline-bootstrap-gap-analysis.md  offline-contingency.md  (+16 more)
docs/ADRs/: ADR-0001-initial-architecture.md  ADR-0002-dry-run-pipeline.md  ADR-0002-type-checking-dependency-management.md  ADR-0003-dependency-upgrade-ecosystem.md  ADR-0003-dry-run-pipeline.md  ADR-0004-chiron-subsystem-extraction.md
docs/archive/: ARCHITECTURE_REFACTORING_REPORT.md  README.md  ci-workflow-comparison.md  dependency-upgrade-tracker.md  next-steps.md  offline-packaging-status.md  orchestration-enhancement.md  pipeline-optimization-summary.md
docs/chiron/: AIR_GAPPED_DEPLOYMENT.md  ARCHITECTURE.md  CHIRON_FINAL_REPORT.md  (+16 more)
evaluation/: __init__.py  rag.py
examples/: intelligent_upgrade_workflow.py
execution/: README.md  __init__.py  adapters.py  schedules.py  service.py  workers.py  workflows.py
governance/: README.md  __init__.py  audit.py  lineage.py  model_registry.py  reports.py
infra/: README.md  docker-compose.yaml
ingestion/: README.md  __init__.py  connectors.py  models.py  persistence.py  pii.py  scheduler.py  service.py
model/: README.md  __init__.py  config.py  gateways.py
monitoring/: README.md  __init__.py  collectors.py  dashboards.py  service.py
observability/: README.md  __init__.py  logging.py  metrics.py  tracing.py
plugins/: README.md
prometheus/: __init__.py  __main__.py  cli.py  config.py  debugging.py  dryrun.py  environment.py  pipeline.py  plugins.py  remediation.py
reasoning/: README.md  __init__.py  service.py
retrieval/: README.md  __init__.py  backends.py  evaluation.py  regression_cli.py  service.py
scripts/: __init__.py  _compat_deps_status.py  _original_dependency_drift.py  _original_deps_status.py  _original_mirror_manager.py  benchmark-env.sh  bootstrap_offline.py  build-wheelhouse.sh  check-macos-cruft.sh  cleanup-macos-cruft.sh  dependency_drift.py  deps-preflight.sh  deps_status.py  download_models.py  export_grafana_dashboards.py  format_yaml.py  generate_dependency_graph.py  manage-deps.sh  mirror_manager.py  offline_doctor.py  offline_package.py  orchestration_coordinator.py  preflight_deps.py  process_dryrun_governance.py  render_preflight_summary.py  setup-dev-optimized.sh  summarize_dist.sh  sync-dependencies.py  upgrade_guard.py  upgrade_planner.py  validate-setup.sh  validate_prepackaging.py  validate_quality_gates.py  verify_artifacts.sh  verify_dependency_pipeline.py
sdk/: README.md  __init__.py  client.py
security/: README.md  __init__.py  auth.py  policy.py  secrets.py
tests/: README.md  test_debugging.py
ux/: README.md
var/: ingestion.db
web/: README.md  package.json  tsconfig.json
(+188 files in other folders)
