[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prometheus-os"
version = "0.1.0"
description = "Prometheus Strategy OS bootstrap"
authors = ["Prometheus Contributors <oss@example.com>"]
readme = "README.md"
packages = [
  { include = "prometheus" },
  { include = "common" },
  { include = "ingestion" },
  { include = "retrieval" },
  { include = "reasoning" },
  { include = "decision" },
  { include = "execution" },
  { include = "monitoring" },
  { include = "model" },
  { include = "security" },
  { include = "governance" },
  { include = "collaboration" },
  { include = "observability" },
  { include = "sdk" },
]

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.37.0"
haystack-ai = { version = "^2.18.0", optional = true }
dspy-ai = { version = "^3.0.3", optional = true, markers = "python_version < '3.14'" }
ragas = { version = "^0.1.15", optional = true }
trulens-eval = { version = "^2.4.0", optional = true }
mteb = { version = "^1.38.60", optional = true, markers = "python_version < '3.13'" }
llama-cpp-python = { version = "^0.2.90", optional = true }
sentencepiece = { version = "^0.2.0", optional = true }
python-keycloak = { version = "^3.8.1", optional = true }
openfga-sdk = { version = "^0.1.1", optional = true }
boto3 = { version = "^1.35.0", optional = true }
redis = { version = "^5.0.8", optional = true }
cassandra-driver = { version = "^3.29.2", optional = true }
prometheus-client = "^0.23.1"
qdrant-client = "^1.15.1"
rapidfuzz = "^3.14.1"
requests = "^2.32.5"
httpx = "^0.28.1"
temporalio = "^1.18.0"
trafilatura = "^2.0.0"
opensearch-py = "^3.0.0"
sentence-transformers = "^5.1.1"
fastapi = "^0.117.1"
uvicorn = { version = "^0.37.0", extras = ["standard"] }
typer = "^0.19.2"
"presidio-analyzer" = { version = "^2.2.352", optional = true }
"presidio-anonymizer" = { version = "^2.2.352", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["vendor/"]

[tool.ruff.lint]
extend-select = ["B", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.poetry.extras]
pii = ["presidio-analyzer", "presidio-anonymizer"]
observability = ["opentelemetry-exporter-otlp-proto-grpc"]
rag = ["haystack-ai", "dspy-ai", "ragas", "trulens-eval", "mteb"]
llm = ["llama-cpp-python", "sentencepiece"]
governance = ["python-keycloak", "openfga-sdk"]
integrations = ["boto3", "redis", "cassandra-driver"]

[tool.poetry.scripts]
prometheus-api = "api.main:run"
prometheus = "prometheus.cli:main"
